--- a/pages/concepts/filters.mdx
+++ b/pages/concepts/filters.mdx
@@ -53,7 +53,7 @@ ORDER BY city DESC LIMIT 50
 
 Note that the `discount` filter value is appended to the existing `WHERE` clause.
 
-Semphor represents the filter array as shown below. You can view the active filters by clicking on the filter icon on the top right side of the query editor. We can use the following fitler array as an example to illustrate more fitlering scenarios.
+Internally, Semaphor represents the filter array as shown below. You can view the active filters by clicking on the filter icon on the top right side of the query editor. We can use the following fitler array as an example to illustrate more fitlering scenarios.
 
 ```json
 [
