fixed nav bug for base queries

--- a/pages/concepts/models.mdx
+++ b/pages/concepts/models.mdx
@@ -1,4 +1,4 @@
-## Base Queries / Data Modeling
+## Base Queries / Data Models
 
 The `base queries` serve as the top-level data model that you can reference in your card SQL. It promotes the reusability of SQL logic across all dashboard cards. They come handy in scenarios where you want to create multiple visualizations from the same underlying dataset. You can represent this dataset using a `base query` and reference it in all your dashboard cards as `{{ ref('base_query') }}`.
 
