removed ../ syntax notation from styles

--- a/pages/integrate/vue-integration.mdx
+++ b/pages/integrate/vue-integration.mdx
@@ -55,7 +55,7 @@ To render Semaphor dashboard in your app, create the following components in the
 ```tsx {3-7} copy filename="src/components/sempahor-dashboard.tsx"
 import { useEffect, useState } from 'react';
 import { AuthToken, Dashboard } from 'semaphor';
-import '../../node_modules/semaphor/dist/style.css'; // IMPORTANT! Include the CSS file. This is the default style, you can customize it.
+import 'semaphor/dist/style.css'; // IMPORTANT! Include the CSS file. This is the default style, you can customize it.
 
 const DASHBOARD_ID = 'd_cf007a8b-19bc-46ad-8787-2915445b7b86'; // Replace with your actual dashboard ID
 const DASHBOARD_SECRET = 'ds_f32f0b30-b7e1-40f9-ba6a-9804a5b9d635'; // Replace with your actual dashboard secret
