--- a/pages/integrate/react-component.mdx
+++ b/pages/integrate/react-component.mdx
@@ -56,7 +56,7 @@ Here is a simple example of a React component that demonstrates how to use the `
 ```tsx copy {3, 11}
 import { useEffect, useState } from 'react';
 import { AuthToken, Dashboard } from 'semaphor';
-import '../node_modules/semaphor/dist/style.css'; // IMPORTANT! Include the CSS file. This is the default style, you can customize it.
+import 'semaphor/dist/style.css'; // IMPORTANT! Include the CSS file. This is the default style, you can customize it.
 
 function App() {
   const [authToken, setAuthToken] = useState<AuthToken>();
@@ -79,7 +79,7 @@ Here is the complete React code that uses the above steps. You can copy and past
 ```tsx {3-7, 31, 43} copy filename="App.tsx"
 import { useEffect, useState } from 'react';
 import { AuthToken, Dashboard } from 'semaphor';
-import '../node_modules/semaphor/dist/style.css'; // IMPORTANT! Include the CSS file. This is the default style, you can customize it.
+import 'semaphor/dist/style.css'; // IMPORTANT! Include the CSS file. This is the default style, you can customize it.
 
 const DASHBOARD_ID = 'd_cf007a8b-19bc-46ad-8787-2915445b7b86'; // Replace with your actual dashboard ID
 const DASHBOARD_SECRET = 'ds_f32f0b30-b7e1-40f9-ba6a-9804a5b9d635'; // Replace with your actual dashboard secret
