added custom styles to webcomponent

--- a/pages/integrate/web-component.mdx
+++ b/pages/integrate/web-component.mdx
@@ -126,6 +126,32 @@ npm run dev
 
 ---
 
+### Passing styles
+
+Create a custom class in your style.css.
+
+```css filename="style.css"
+.myClass {
+  border-color: orange;
+}
+```
+
+And then you can reference this class in `dashboard.js`, like so.
+
+```js filename="daashboard.js"
+import './style.css';
+
+const customStyle = {
+  default: {
+    dashboardCard: 'myClass',
+  },
+};
+
+dashboardElement.setAttribute('style', JSON.stringify(customStyle));
+```
+
+Since the `style` attribute is a complex type, you need to pass the JSON string value to the style attribite.
+
 ### Key Considerations
 
 - **Security:** Embedding secrets directly in your frontend code is not recommended. This example is for illustration purposes only, and assumes the `DASHBOARD_SECRET` is safe to expose (public dashboards), but, secrets should not be accessible on the client side. You might need a server-side solution to handle authentication securely.
