--- a/pages/integrate/vue-component.mdx
+++ b/pages/integrate/vue-component.mdx
@@ -1,6 +1,6 @@
 ## Vue Component
 
-This guide offers step-by-step instructions on how to integrate the Semaphor dashboard into your Vue app. We're assuming that you already have a React Vue set up. If not, you can follow the instructions [here](https://vitejs.dev/guide/#scaffolding-your-first-vite-project) to bootstrap your Vue app.
+This guide offers step-by-step instructions on how to integrate the Semaphor dashboard into your Vue app. We're assuming that you already have a Vue app set up. If not, you can follow the instructions [here](https://vitejs.dev/guide/#scaffolding-your-first-vite-project) to bootstrap your Vue app.
 
 ### 1) Install Semaphor Package
 
