--- a/pages/integrate/vue-component.mdx
+++ b/pages/integrate/vue-component.mdx
@@ -62,7 +62,7 @@ fetchToken();
 
 ### 3) Initialize Dashboard
 
-Here is a simple example of a React component that demonstrates how to use the `Dashboard` component from the `semaphor` package. Make sure you import style.css either at the beginning of your component or in your global CSS file. This step is necessary for correctly loading your dashboard styles.
+Here is a simple example of a Vue component that demonstrates how to use the `Dashboard` component from the `semaphor` package. Make sure you import style.css either at the beginning of your component or in your global CSS file. This step is necessary for correctly loading your dashboard styles.
 
 ```vue copy {3}
 <template>
