--- a/pages/integrate/vue-component.mdx
+++ b/pages/integrate/vue-component.mdx
@@ -73,7 +73,7 @@ Here is a simple example that demonstrates how to use the `Dashboard` component 
 
 ---
 
-### Full Code
+### Full Code (Vite)
 
 Here is the complete Vue code that uses the above steps. You can copy and paste this example into your own application.
 
@@ -124,6 +124,69 @@ fetchToken();
 </template>
 
 <style scoped></style>
+```
+
+### Full Code (Nuxt)
+
+If you are using Nuxt, make sure to import the component dynamically as highlighted below.
+
+```vue {9-15} copy filename="App.vue"
+<template>
+  <div v-if="!token">Loading...</div>
+  <Dashboard v-if="token" :token="token" :id="DASHBOARD_ID" />
+</template>
+
+<script setup>
+import { ref, onMounted } from 'vue';
+
+// Dynamically import components
+let Dashboard;
+let AuthToken;
+import('vue-semaphor').then((module) => {
+  Dashboard = module.Dashboard;
+  AuthToken = module.AuthToken;
+});
+
+// Constants
+const DASHBOARD_ID = 'd_cf007a8b-19bc-46ad-8787-2915445b7b86';
+const DASHBOARD_SECRET = 'ds_f32f0b30-b7e1-40f9-ba6a-9804a5b9d635';
+const TOKEN_URL = 'https://semaphor.cloud/api/v1/token';
+import 'vue-semaphor/dist/style.css';
+
+// Reactive state
+const token = ref(null);
+
+// Fetch token
+async function fetchToken() {
+  try {
+    const response = await fetch(TOKEN_URL, {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+      },
+      body: JSON.stringify({
+        dashboardId: DASHBOARD_ID,
+        dashboardSecret: DASHBOARD_SECRET,
+      }),
+    });
+    if (!response.ok) {
+      throw new Error(`HTTP error! status: ${response.status}`);
+    }
+
+    const tk = await response.json();
+    if (tk?.accessToken) {
+      token.value = tk;
+    }
+  } catch (error) {
+    console.error('There was an error!', error);
+  }
+}
+
+// Lifecycle hook to fetch token on mount
+onMounted(() => {
+  fetchToken();
+});
+</script>
 ```
 
 ---
