--- a/pages/integrate/vue-component.mdx
+++ b/pages/integrate/vue-component.mdx
@@ -1,34 +1,25 @@
+import { Tabs } from 'nextra/components';
+
 ## Vue Component
 
-This guide offers step-by-step instructions on how to integrate the Semaphor dashboard into your Vue app. We're assuming that you already have a Vue app set up. If not, you can follow the instructions [here](https://vitejs.dev/guide/#scaffolding-your-first-vite-project) to bootstrap your Vue app.
+This section you will learn how to render the Semaphor dashboard into your Vue app. We assume that you already have an existing Vue app, or you can follow the instructions [here](https://vitejs.dev/guide/#scaffolding-your-first-vite-project) to bootstrap one.
 
 ### 1) Install Semaphor Package
 
-Open your terminal in your project directory and run the following command. This command installs the `vue-semaphor` package and adds it to your project dependencies.
+Add Sempahor to your project with the following command. Make sure to use the right package depending on the Vue version listed in your `package.json`
 
-```markdown copy
-npm i vue-semaphor
-```
+<Tabs items={['Vue 3', 'Vue 2']} defaultIndex="1">
+  <Tabs.Tab>``` npm i vue-semaphor ```</Tabs.Tab>
+  <Tabs.Tab>``` npm i vue2-semaphor ```</Tabs.Tab>
+</Tabs>
 
 ---
 
 ### 2) Get Auth Token
 
-Before rendering the `Dashboard`, first acquire the `AuthToken`.Make a POST fetch call as shown below.
+Make a simple fetch call to acquire the token by passing your `dashboard id` and `secret`. In production, you will need to obtain the token from the server side.
 
-```vue copy
-<script setup lang="ts">
-import { ref } from 'vue';
-import { Dashboard } from 'vue-semaphor';
-import type { AuthToken } from 'vue-semaphor';
-
-const DASHBOARD_ID = 'd_cf007a8b-19bc-46ad-8787-2915445b7b86'; // Replace with your actual dashboard id
-const DASHBOARD_SECRET = 'ds_f32f0b30-b7e1-40f9-ba6a-9804a5b9d635'; // Replace with your actual dashboard secret
-const TOKEN_URL = 'https://semaphor.cloud/api/v1/token';
-import 'vue-semaphor/dist/style.css'; // IMPORTANT! Include the CSS file. This is the default style, you can customize it.
-
-const token = ref<AuthToken | null>(null);
-
+```ts copy
 async function fetchToken() {
   try {
     const response = await fetch(TOKEN_URL, {
@@ -54,41 +45,63 @@ async function fetchToken() {
     console.error('There was an error!', error);
   }
 }
-fetchToken();
-</script>
 ```
 
 ---
 
 ### 3) Initialize Dashboard
 
-Here is a simple example that demonstrates how to use the `Dashboard` component from the `vue-semaphor` package. Make sure you import style.css either at the beginning of your component or in your global CSS file. This step is necessary for correctly loading your dashboard styles.
+**Make sure** to import `vue-semaphor/dist/style.css` either at the beginning of your component or in your global CSS file. Your dashboard will not render as expected without base styles. Refer to the full code section.
 
-```vue copy {3}
+```vue copy {5}
 <template>
-  <div v-if="!token">Loading...</div>
-  <Dashboard v-if="token" :token="token" :id="DASHBOARD_ID" />
+  <div>
+    <Dashboard
+      v-if="token"
+      :token="token"
+      :id="DASHBOARD_ID"
+      currentTheme="system"
+    />
+  </div>
 </template>
 ```
 
 ---
 
-### Full Code (Vite)
+### Full Code
 
 Here is the complete Vue code that uses the above steps. You can copy and paste this example into your own application.
 
-```vue {9} copy filename="App.vue"
+<Tabs items={['Vue 3', 'Vue 2']}>
+<Tabs.Tab>
+
+```vue {4} filename="App.vue" copy
 <script setup lang="ts">
 import { ref } from 'vue';
-import { Dashboard } from 'vue-semaphor';
-import type { AuthToken } from 'vue-semaphor';
+import { Dashboard, AuthToken, TStyle } from 'vue-semaphor';
+import 'vue-semaphor/dist/style.css'; // IMPORTANT! Include the CSS file. This is the default style, you can customize it.
 
 const DASHBOARD_ID = 'd_cf007a8b-19bc-46ad-8787-2915445b7b86';
 const DASHBOARD_SECRET = 'ds_f32f0b30-b7e1-40f9-ba6a-9804a5b9d635';
 const TOKEN_URL = 'https://semaphor.cloud/api/v1/token';
-import 'vue-semaphor/dist/style.css'; // IMPORTANT! Include the CSS file. This is the default style, you can customize it.
 
 const token = ref<AuthToken | null>(null);
+
+// Define your custom styles here. Refer to the themes and styles section of the doc.
+const customStyle: TStyle = {
+  default: {
+    chart: {
+      dataset: {
+        backgroundColor: ['red', 'blue', 'green', 'purple'],
+        borderColor: ['red', 'blue', 'green', 'purple'],
+      },
+    },
+  },
+};
+
+function handleSemaphorEvent(event: unknown) {
+  console.log('Event:', event);
+}
 
 async function fetchToken() {
   try {
@@ -106,10 +119,9 @@ async function fetchToken() {
       throw new Error(`HTTP error! status: ${response.status}`);
     }
 
-    const tk = await response.json();
-    if (tk?.accessToken) {
-      token.value = tk;
-      //console.log('token', token.value);
+    const tkn = await response.json();
+    if (tkn?.accessToken) {
+      token.value = tkn;
     }
   } catch (error) {
     console.error('There was an error!', error);
@@ -119,16 +131,111 @@ fetchToken();
 </script>
 
 <template>
+  <div></div>
   <div v-if="!token">Loading...</div>
-  <Dashboard v-if="token" :token="token" :id="DASHBOARD_ID" />
+  <Dashboard
+    v-if="token"
+    :token="token"
+    :id="DASHBOARD_ID"
+    :customStyle="customStyle"
+    :currentTheme="'system'"
+    :onEvent="handleSemaphorEvent"
+  />
 </template>
-
-<style scoped></style>
 ```
+
+</Tabs.Tab>
+<Tabs.Tab>
+
+```vue {3} filename="App.vue" copy
+<script lang="ts">
+import { Dashboard, TStyle } from 'vue2-semaphor';
+import 'vue2-semaphor/dist/style.css'; // IMPORTANT! Include the CSS file. This is the default style, you can customize it.
+
+const DASHBOARD_ID = 'd_cf007a8b-19bc-46ad-8787-2915445b7b86';
+const DASHBOARD_SECRET = 'ds_f32f0b30-b7e1-40f9-ba6a-9804a5b9d635';
+const TOKEN_URL = 'https://semaphor.cloud/api/v1/token';
+
+// Define your custom styles here. Refer to the themes and styles section of the doc.
+const customStyle: TStyle = {
+  default: {
+    chart: {
+      dataset: {
+        backgroundColor: ['red', 'blue', 'green', 'purple'],
+        borderColor: ['red', 'blue', 'green', 'purple'],
+      },
+    },
+  },
+};
+
+export default {
+  components: {
+    Dashboard,
+  },
+  data() {
+    return {
+      token: null,
+      DASHBOARD_ID: DASHBOARD_ID,
+      customStyle: customStyle,
+    };
+  },
+  methods: {
+    handleSemaphorEvent(event: unknown) {
+      console.log('Event:', event);
+    },
+    async fetchToken() {
+      try {
+        const response = await fetch(TOKEN_URL, {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({
+            dashboardId: DASHBOARD_ID,
+            dashboardSecret: DASHBOARD_SECRET,
+          }),
+        });
+        if (!response.ok) {
+          throw new Error(`HTTP error! status: ${response.status}`);
+        }
+
+        const tkn = await response.json();
+        if (tkn?.accessToken) {
+          this.token = tkn;
+        }
+      } catch (error) {
+        console.error('There was an error!', error);
+      }
+    },
+  },
+  created() {
+    this.fetchToken();
+  },
+};
+</script>
+<template>
+  <div>
+    <div v-if="!token">Loading...</div>
+    <Dashboard
+      v-if="token"
+      :token="token"
+      :id="DASHBOARD_ID"
+      currentTheme="system"
+      :customStyle="customStyle"
+      :onEvent="handleSemaphorEvent"
+    />
+  </div>
+</template>
+```
+
+</Tabs.Tab>
+<Tabs.Tab>**npm** is a package manager for the JavaScript programming language.</Tabs.Tab>
+<Tabs.Tab>**Yarn** is a software packaging system.</Tabs.Tab>
+</Tabs>
 
 ### Full Code (Nuxt)
 
-If you are using Nuxt, make sure to import the component dynamically as highlighted below.
+If you are using Nextjs, make sure to import the component dynamically as shown below.
 
 ```vue {9-15} copy filename="App.vue"
 <template>
@@ -193,4 +300,4 @@ onMounted(() => {
 
 ### Key Considerations
 
-- **Security Note:** Keep the `DASHBOARD_SECRET` secure and do not expose it in client-side code in production. This example is for demonstration purposes only. When deploying in production, obtain the authentication token from a secure, server-side environment.
+- **Security Note:** Keep the `DASHBOARD_SECRET` secure and do not expose it in client-side code in production. The examples above are for demonstration purposes. When deploying in production, obtain the authentication token from a secure, server-side environment.
