--- a/pages/concepts/security.mdx
+++ b/pages/concepts/security.mdx
@@ -2,7 +2,7 @@ import { Tabs } from 'nextra/components';
 
 ## Security & Multi-tenancy
 
-Semaphor offers multiple options for securing and segmenting customer data based on the end user or the tenant. You can use connection-level security, table-level security, and also row/column-level security to precisely control what your users see when they access the dashboard.
+Semaphor offers multiple options for securing and segmenting customer data based on the end user or the tenant. You can use `connection-level` security, `table-level` security, and also `row/column-level` security to precisely control what your users see when they access the dashboard.
 
 ### Connection-Level Security
 
